# subnet1_coreDAO

./: .env  .env 2.backup_1753868733  .env 2.backup_before_validator2  .env.aptos.example  .env.backup  .env.v2  .gitignore  .gitmodules  CLEANUP_GUIDE.md  CLEANUP_SUMMARY.md  FINAL_SCRIPTS_COMPATIBILITY_REPORT 3.md  MIGRATION_COMPLETED.md  README.md  README_APTOS_MIGRATION.md  RUN_COMMANDS.md  ULTRA_LOW_STAKE_SETUP.md  analyze_tx.py  auto_register.py  auto_register_entities.py  check_balance.py  check_entities_vs_metagraph.py  check_setup.py  check_transaction.py  check_validator_sync.py  cleanup_project.py  comprehensive_fix 4.py  core_metagraph.py  core_metagraph_data.json  core_services_report.json  create_new_wallet.py  debug_registration.py  debug_task_assignment 3.py  debug_task_flow.py  debug_validator_detection.py  debug_zero_scores.py  deploy_fresh_contract.py  deploy_low_stake_contract.py  final_network_check.py  fix_all_errors.py  fix_consensus_loop 2.py  (+77 more)
sdk/moderntensor_aptos/: CHANGELOG.md  LICENSE  MIGRATION.md  README.md  README_APTOS.md  __init__.py  pyproject.toml  pytest.ini  pytest.ini.bak  requirements-ci.txt  requirements-test.txt  requirements.txt  setup.py  test_wallet.txt
sdk/moderntensor_aptos/.github/workflows/: python-package.yml
sdk/moderntensor_aptos/.venv-aptos/: pyvenv.cfg
sdk/moderntensor_aptos/cli/: aptosctl.py
sdk/moderntensor_aptos/docs/: README.md
sdk/moderntensor_aptos/mt_aptos/: __init__.py  account.py  async_client.py  bcs.py  client.py  runner.py  transactions.py  type_tag.py  version.py
sdk/moderntensor_aptos/mt_aptos/agent/: miner_agent.py
sdk/moderntensor_aptos/mt_aptos/aptos/: README.md  __init__.py  contract_client.py  contract_service.py  datatypes.py  metagraph.py  module_manager.py  service.py
sdk/moderntensor_aptos/mt_aptos/aptos_core/: __init__.py  account_service.py  address.py  context.py  contract_client.py  validator_helper.py
sdk/moderntensor_aptos/mt_aptos/cli/: aptosctl.py  main.py  metagraph_cli.py  query_cli.py  stake_cli.py  tx_cli.py  wallet_cli.py
sdk/moderntensor_aptos/mt_aptos/config/: settings.example.py  settings.py  settings.txt
sdk/moderntensor_aptos/mt_aptos/consensus/: node.py  (+3 more)
sdk/moderntensor_aptos/network/: test_miner_comms_api.py
sdk/moderntensor_aptos/scripts/: check_aptos_cli.py  create_subnet.move  register_miner.move  register_my_validator.move  register_with_transfer.move
sdk/moderntensor_aptos/tests/: conftest.py  test_validator_node.py
(+674 files in other folders)
